src/components/Navbar.css
.navbar {
    top: 0;
    flex-direction: row;
    left: 50%;
    transform: translateX(-50%);
    position: fixed;
    justify-content: space-between;
    align-items: center;
    display: flex;
    padding: 20px;
    background-color: var(--fern-green);
    width: 100%; /* Fill entire width of screen */
    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); /* Soft shadow for fade */
}
.navbar-middle {
    justify-content: center;
    overflow: hidden;
}
.navbar-left {
    margin-left: 3vw;
}

.navbar-right {
    margin-right: 3vw;
}

.navbutton {
    background-color: var(--rasin-black);
    color: var(--lavender-blush);
    margin: 5px;
    transform: none;
}

.image-button {
    width: 40px;
    height: 40px;
}

